# vdpa-network-binding-plugin

./: README.md
.github/workflows/: test.yml
manifests/: vdpa-mutating-webhook.yaml
sidecar/: main.go
sidecar/domain/: BUILD.bazel  configurator.go  configurator_test.go
sidecar/server/: BUILD.bazel  server.go
webhook/: BUILD.bazel  cert.go  main.go  webhook.go  webhookconfig.go
