load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "go_default_library",
    srcs = [
        "cert.go",
        "main.go",
        "webhook.go",
        "webhookconfig.go",
    ],
    importpath = "kubevirt.io/kubevirt/cmd/webhooks/mutating/vdpa",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apimachinery/patch:go_default_library",
        "//pkg/certificates/triple:go_default_library",
        "//pkg/certificates/triple/cert:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/k8s.io/api/admission/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "kubevirt-vdpa-mutating-webhook",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "webhook_suite_test.go",
        "webhook_test.go",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//pkg/apimachinery/patch:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/client-go/testutils:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/api/admission/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
    ],
)

pkg_tar(
    name = "get-version",
    srcs = ["//:get-version"],
    package_dir = "/",
)

pkg_tar(
    name = "kubevirt-vdpa-mutating-webhook-tar",
    srcs = [":kubevirt-vdpa-mutating-webhook"],
    package_dir = "/",
)

oci_image(
    name = "version-container",
    base = "//:passwd-image",
    tars = [
        ":get-version",
    ],
)

oci_image(
    name = "kubevirt-vdpa-mutating-webhook-image",
    base = ":version-container",
    entrypoint = ["/kubevirt-vdpa-mutating-webhook"],
    tars = [
        ":kubevirt-vdpa-mutating-webhook-tar",
    ],
    visibility = ["//visibility:public"],
)
